crates/plotnik-lib/tests/04-emit/linking/ts_only_kind_unknown_in_javascript.txt
Q = (interface_declaration) @decl
------------------ DIAGNOSTICS -------------------
error: `interface_declaration` is not a valid node kind
 --> query.ptk:1:6
  |
1 | Q = (interface_declaration) @decl
  |      ^^^^^^^^^^^^^^^^^^^^^
